--- a/main/templates/aws-mirovoy-ref-arch-01-newvpc.yaml
+++ b/main/templates/aws-mirovoy-ref-arch-01-newvpc.yaml
@@ -72,11 +72,10 @@ Parameters:
     Type: List<AWS::EC2::AvailabilityZone::Name>
   NumberOfAZs:
     AllowedValues:
-      - 1
       - 2
     Default: 2
-    Description: Number of Availability Zones to use in the VPC. This must
-      match your selections in the list of Availability Zones parameter.
+    Description: Number of Availability Zones to use in the VPC. Currently
+      must be exactly 2.
     Type: Number
   VpcCidr:
     AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/(1[6-9]|2[0-8])'
