--- a/main/templates/aws-mirovoy-ref-arch-02-securitygroups.yaml
+++ b/main/templates/aws-mirovoy-ref-arch-02-securitygroups.yaml
@@ -51,11 +51,10 @@ Metadata:
 Parameters:
   NumberOfAZs:
     AllowedValues:
-      - 1
       - 2
     Default: 2
-    Description: Number of Availability Zones to use in the VPC. This must
-      match your selections in the list of Availability Zones parameter.
+    Description: Number of Availability Zones to use in the VPC. Currently
+      limited to exactly 2.
     Type: Number
   SshAccessCidr:
     AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
